feat: 1. remove Options -Xverify:none . (project.clj) 2. add pubsub service